--- a/tutorials/enzoem_2.Rmd
+++ b/tutorials/enzoem_2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "ENZOEM Módulo 1 - Introducción a R y estadística básica"
+title: "ENZOEM Módulo 2 - Test estadísticos en ciencias experimentales"
 csl: nature.csl
 output:
   html_document:
@@ -36,12 +36,12 @@ klippy::klippy(tooltip_message = 'Click para copiar', tooltip_success = 'Hecho!'
  
 # **Presentación**
 
-En este espacio se encuentran los contenidos para el Módulo 1 - Introducción a R y estadística básica del Curso de Estadística ENZOEM, que tiene la siguiente estructura:
+En este espacio se encuentran los contenidos para el Módulo 2 - Test estadísticos en ciencias experimentales del Curso de Estadística ENZOEM, que tiene la siguiente estructura:
 
-  1. El lenguaje R y el entorno R-Studio: funciones y objetos. [Materiales](https://jabiologo.github.io/web/tutorials/enzoem_1_1_files/enzoem1_1-2.zip)
-  2. Flujo de trabajo en R: directorio de trabajo, lectura y escritura de datos. [Materiales](https://jabiologo.github.io/web/tutorials/enzoem_1_1_files/enzoem1_1-2.zip)
-  3. Visualización de datos en R y ggplot2. [Materiales](https://jabiologo.github.io/web/tutorials/enzoem_1_1_files/enzoem1_3.zip)
-  4. Distribuciones de probabilidad y estadística básica. [Presentaciones](https://jabiologo.github.io/web/tutorials/enzoem_1_1_files/modulo1_4_compressed.pdf)
+  1. Generalidades. [Materiales]()
+  2. Principales test paramétricos y no paramétricos. [Materiales]()
+  3. El modelo lineal generalizado. [Materiales]()
+  4. Diseños avanzados: GLS y GLMM. [Materiales]()
 
 # **1. El lenguaje R y el entorno R-Studio: funciones y objetos**
 
@@ -63,115 +63,8 @@ En este curso utilizaremos dos softwares que deberemos descargar e instalar:
 Una vez descargados, RStudio se vinculará con R automáticamente.
 <br/><br/>
 
-#### **Un paseo por R y RStudio** 
 
-Es importante diferenciar entre R y RStudio. El software o lenguaje que utilizamos para los análisis estadisticos es **R**, por tanto podemos utilizar la consola de R por sí sola. **RStudio es un IDE** (del inglés _Integrated Development Environment_), un entorno de desarrollo integrado, una "carcasa" que envuelve a R y facilita su uso. 
-Es imporante familiarizarse con RStudio, ya que utilizaremos R a través de él. Tómate unos minutos para explorar sus diferentes paneles y personalizar su diseño:
-
-* Diferencia entre _consola_ y _script_
-* Visualiza tu _entorno de trabajo_, tu ventana de _gráficos (plots)_, tus _librerías (paquetes)_ cargadas, etc. 
-* También puedes cambiar el color de fondo, aumentar el tamaño de letra, etc.
-
-
-<br/>
-<p align="center">
-<img height=350 width=600 src="estadisticaBasica_files/rstudio.png"> </a>
-</p>
-<font size="3">
-<br/><br/>
-
-#### **Las `funciones()`**
-
-Las **`funciones()`** son la "maquinaria" de R, las que realizan el trabajo. Se pueden identificar porque generalmente van seguidas de unos paréntesis entre los cuales se colocan sus **argumentos**. Los argumentos de una función son elementos que necesita esa función para ejecutarse y suelen ir separados por _comas_ $,$. Por ejemplo, existe una función que se llama "concatenar" (que en el lenguaje R se escribe `c()`), que simplemente sirve para unir en el mismo vector una serie de elementos (letras, números, etc.). Vamos a utilizar esa función para unir en un único vector una serie de números.
-
-```{r ch1, message=F, cache = T, eval = T}
-# La almohadilla se utiliza para incluir un comentario. Todo lo que se encuentre
-# después de una almohadilla no se ejecutará en la consola.
-
-# Unir los números 3, 7, 12 y 4 en un único vector
-c(3, 7, 12, 4)
-
-```
-
-* ¿Cuál es la función? ¿Cuáles son sus argumentos?
-
-Imaginemos que ahora queremos hallar la media de esos números. Podemos utilizar otra función denominada `mean()` a la cual le introduciremos los numeros que hemos concatenado anteriormente como único argumento:
-
-```{r ch2, message=F, cache = T, eval = T}
-# Obtener la media de los números 3, 7, 12 y 4
-mean(c(3, 7, 12, 4))
-```
-
-Todas las funciones de R se alamcenan en "bibliotecas" o librerías (habitualmente denominados paquetes). Estos paquetes podemos entenderlos como cajas de herramientas donde se almacenan las herramientas que queremos utilizar. Hay algunos paquetes que vienen instalados y cargados por defecto en R. Sin embargo, otros los tenemos que descargar e instalar por primera vez y luego cargarlos en nuestra sesión cada vez que queramos utilizarlos. Por ejemplo, el paquete `lme4` se utiliza frecuentemente para ajustar modelos generales lineales mixtos. Podemos descargarlo, instalarlo y cargarlo en nuestra sesión de R de la siguiente manera:
-
-```{r ch3, message=F, cache = T, eval = F}
-# Descargamos e instalamos el paquete
-install.packages("lme4")
-# Cargamos el paquete en nuestra sesión
-library(lme4)
-```
-
-Una de las grandes ventajas (o inconvenientes?) de R es que es un software libre, por lo que cualquiera puede desarrollar sus propios paquetes con las herramientas (funciones) que necesite y ponerlo a disposición de la comunidad de usuarios. Si tenéis curiosidad, [aquí](https://www.youtube.com/watch?v=ctsGXwaxA1o&list=PL4ZUlAlk7Qic9a6aBIMcRs7_CLbIzCalW) podéis encontrar un pequeño tutorial sobre como hacerlo.
-<br/><br/>
-
-#### **Los objetos**
-
-Los **objetos** en R son los contenedores donde almacenamos los resultados (outputs) de las funciones. Podemos identificarlos porque suelen aparecer por primera vez precediendo a los caracteres `<-`, que simbolizan una flecha que señala hacia la izquierda. Cada vez que se quiera crear un objeto se le ha de dar un nombre, el que queramos, aunque suele ser conveniente darle un nombre que tenga sentido. Por ejemplo, vamos a almacenar en un objeto que vamos a llamar "numeros" la concatenación de valores que creamos anteriormente:
-
-```{r ch4, message=F, cache = T, eval = T}
-# Almacenamos en un objeto llamado "numeros" el resultado de concatenar 3, 7, 12 y 4
-numeros <- c(3, 7, 12, 4)
-
-# Ahora podemos "llamar" a "numeros" para ver qué tiene dentro
-numeros
-
-# También podemos utilizar a "numeros" dentro de otra función, por ejemplo mean()
-mean(numeros)
-
-# Por último podemos guardar dentro de otro objeto el resultado de la linea anterior
-
-m <- mean(numeros)
-m
-```
-
- Todos los objetos en R tienen una clase, que informa sobre el tipo de objeto que es. Por ejemplo, si es un vector de números será `numeric`, pero si lo que almacena son caracteres su clase será `character`. Hay muschísimas clases de objetos (¡incluso se pueden crear clases nuevas!). Conocer la clase de nuestros objetos es muy important, puesto que **algunas funciones necesitan que sus argumentos sean de una clase específica**, y sino no funcionarán. Por ejemplo, no podemos hacer la media de las letras "a", "b" y "c", pero sí podremos hacer la media de los números 1, 2 y 3.
-
-```{r ch5, message=T, cache = T, eval = T}
-# Para averiguar la clase de un objeto usamos la función class()
-class(numeros)
-
-# Vamos a crear un objeto con los caracteres "a", "b" y "c"
-letras <- c("a", "b", "c")
-
-# Exploramos la clase de letras
-class(letras)
-
-# Vamos a intentar hacer la media de letras
-mean(letras)
-
-```
-<br/>
-
-# **2. Flujo de trabajo en R: directorio de trabajo, lectura y escritura de datos**
-
-#### **Entorno y directorio de trabajo**
-Todos los objetos que vayamos creando o cargando en R se pueden visualizar en el panel `Environment` que suele situarse en la parte superior derecha en RStudio. En ese panel aparece información sobre los objetos, una previsualización o incluso, si el objeto lo permite, podemos hacer click en él y visualizarlos de forma intuitiva en formato "hoja de cálculo". <br/>
-También es importante ser conscientes del directorio de trabajo en el que estamos trabajando, esto es, la carpeta en la que se guardarán los ficheros que salgan de R, o la carpeta desde donde se cargarán los ficheros. Para saber nuestro directorio de trabajo actual utilizamos la función `getwd()`, mienstras que para cambiarla utilizaremos `setwd("mi_directorio_de_trabajo_nuevo")`.
-
-```{r ch6, message=T, cache = T, eval = T}
-# Exploramos mi directorio de trabajo actual
-getwd()
-
-# Cambiamos el directorio de trabajo
-setwd("/home/javifl/github/web/tutorials/estadisticaBasica_files")
-
-```
-<br/><br/>
-
-#### **Trabajo con `data.frame`**
-Uno de los objetos que más vamos a utilizar en la práctica es el `data.frame`, que podría asimilarse a un fichero similar a lo que podríamos visualizar en una hoja de cálculo tipo Excel. Vamos a utilizar la función `read.csv` leer un archivo de texto plano delimitado por comas (CSV del inglés _"comma separated values"_) y ensayar algunas cosas con él. Podéis echar un vistazo a este archivo [pinchando aquí](https://raw.githubusercontent.com/jabiologo/web/master/tutorials/estadisticaBasica_files/datosPracticas.csv).
-
-```{r ch7, message=T, cache = T, eval = T}
+```{r ch1, message=T, cache = T, eval = F}
 # Guardamos el archivo en un obejto que denominaremos "datos"
 datos <- read.csv("https://raw.githubusercontent.com/jabiologo/web/master/tutorials/estadisticaBasica_files/datosPracticas.csv")
 
@@ -190,92 +83,6 @@ summary(datos)
 <br/>
 
 Tenemos varias formas de manejar los datos contenidos en un `data.frame`. Por ejemplo, si queremos explorar alguna columna podemos utilizar el símbolo del dólar `$` para seleccionarla por su nombre. Por ejemplo `datos$peso`. Si lo que queremos es seleccionar un dato en concreto, podemos utilizar los corchetes `[]` para acceder a los elementos del `data.frame` indicando su posición en cuanto a filas y columnas separados por una coma con la forma `datos[fila,columna]`. Por ejemplo, si queremos seleccionar el dato que está en la fila 3 y columna 4, podemos emplear `datos[3,4]`. Si dejamos uno de los dos huecos en blanco, obtendremos toda la fila o toda la columna. Por ejemplo, si quremos todos los datos de la fila 7, podemos hacer `datos[7, ]`. Veamos estos ejemplos.
-
-```{r ch8, message=T, cache = T, eval = T}
-# Visualizamos los nombres de las columnas de datos
-colnames(datos)
-
-# Visualizamos los 15 primeros elementos de la columna peso
-datos$peso[1:15]
-
-# Visualizamos el dato que está en la fila 3 y columna 4
-datos[3,4]
-
-# Visualizamos todos los datos de la fila 7
-datos[7,]
-
-```
-
-Por último, vamos a ver una forma más moderna (y cómoda) de trabajar con los datos a través de `tydiverse`. Tydiverse es una coleccion de paquetes de R con una sintaxis en teoría más intuitiva que se centran en el manejo de datos. Utilizan el formato de "tuberías" o pipes mediante el símbolo `%>%`. Veamos un ejemplo.
-
-```{r ch9, message=T, cache = T, eval = T}
-# Instalamos (en caso necesario) y cargamos las librerías de tidyverse
-# install.packages(tidiverse)
-library(tidyverse)
-
-# Tomamos el objeto datos, y lo filtramos dejando tan solo los machos
-datosMacho <- datos %>% filter(sex == "Macho")
-
-# Visualizamos los primeros elementos del nuevo objeto
-head(datosMacho)
-
-# También podemos obtener una muestra aleatoria de un número de filas
-muestra11 <- datos %>% sample_n(11)
-
-# Número de filas de muestra11
-nrow(muestra11)
-
-muestra11
-```
-
-
-<br/><br/>
-
-#### **La ayuda `help()` y preguntar a Google (o ahora a ChatGPT con precaución)**
-
-Otra de las ventajas de R con respecto a otros lenguajes de programación es que sus paquetes deben de cumplir una serie de estándares para poder estar en el repositorio "oficial" [CRAN](https://cran.r-project.org/). Uno de los requerimientos es que las funciones de los diferentes paquetes deben de estar bien documentadas, es decir, debe existir un _manual_ que indique cómo se usa cada una de las funciones del paquete. Ese manual sigue siempre la misma estructura: nombre y descripción de la función, cómo se usa, los argumentos que necesita, el objeto que resulta al aplicar la función (Value), y unos ejemplos de cómo usar la función. Este manual o ayuda puede incluir más apartados, pero los mencionados suelen ser obligatorios. La forma de "llamar a la ayuda" en R es utilizando la función `help()`. Veamos un ejemplo:
-
-```{r ch10, message=T, cache = T, eval = T}
-# Vamos a intentar obtener la media del objeto letras
-mean(letras)
-
-# No entendemos por qué obtenemos este error... vamos a consultar la ayuda para
-# entender qué necesita la función mean()
-help(mean)
-
-# Como vemos en el apartado Arguments, a la función mean() sólo se le pueden
-# proporcionar objetos que sean de la clase numeric, logical, vectors, date,
-# date-time y time_interval.
-# Dado que la clase de letras es character, ahora entendemos por qué no podemos
-# utilizar mean con letras.
-```
-
-Quizás la lección más importante es que normalmente ningún usuario habitual ha asistido a ningún curso especializado de R: la mayoría aprende a base de prueba/error y muchas horas delante del ordendaor con `ERROR` o `WARNINGS` en nuestra pantalla. Por eso es esencial no perder la paciencia y preguntar siempre a Google antes de preguntar al compañero que sabe (siemrpe hay alguien que ha tenido la misma duda antes que nosotros y ha dejado un comentario en un foro o blog). De esta forma interiorizaremos mucho mejor el funcionamiento de este lenguaje y aprenderemos mucho más rápido!
-
-Merece la pena echarle un vistazo (o incluso imprimir si lo creemos conveniente) a esta [cheatsheet](https://iqss.github.io/dss-workshops/R/Rintro/base-r-cheat-sheet.pdf) sobre el uso básico de R.
-
-<br/>
-
-## **Prácticas 1.1 y 1.2: Flujo de trabajo en R y RStudio**
-
-Los fungicidas triazoles son compuestos químicos que se aplican habitualmente en semillas de cultivos para prevenir el crecimiento de hongos patógenos de plantas. Sin embargo, cuando las semillas son consumidas por la fauna silvestre, estos compuestos pueden producir efectos crónicos perjudiciales en su sauld y desarrollo. Queremos estudiar el efecto de los fungicidas triazoles sobre la condición corporal (peso) en perdices rojas _Alectoris rufa_. Para ello se han capturado un total de 300 perdices en tres hábitats diferentes (semiurbano, agrícola y monte matorralizado) a las que se les ha sexado y extraido muestras de heces para obtener la concentración de fungicidas triazoles (ngramos de compuesto/gramo de heces).
-<br/>
-En el los [materiales de este modulo](https://jabiologo.github.io/web/tutorials/enzoem_1_1_files/enzoem1_1-2.zip) se puede encontrar el archivo `enzoem1_1-2_datos.xlsx`. Este archivo pretende reflejar los típicos problemas a los que nos solemos enfrentar cuando empezamos a analizar nuestros propios datos con R. El objetivo de esta práctica es sencillo: realizar un histograma de los pesos de los animales capturados con la función `hist()`y un gráfico de cajas que compare el peso entre machos y hembras con la función `boxplot()`.
-
-<br/>
-
-# **3. Visualización de datos en R y `ggplot2`**
-
-#### **Conceptos básicos de ggplot2**
-
-**ggplot2** es un paquete de R para crear gráficos de alta calidad. Se basa en una gramática que permite describir y construir gráficos, incorporando capas de información complementarias de una forma coherente.
-
-<br/>
-<p align="center">
-<img height=350 width=600 src="Capas_ggplot.png"> </a>
-</p>
-<font size="3">
-<br/><br/>
 
 La gramática de los gráficos se basa en la idea de que cualquier gráfico se puede construir a partir de los siguientes componentes:
 
@@ -314,511 +121,5 @@ Empecemos creando un gráfico de dispersión básico a partir de los dato***s [p
 
 Artwork by \@allison_horst
 
--   **Instalamos y/o cargamos los datos**
 
-    ```{r, cache = T}
-    library (palmerpenguins)
-    data("penguins")
-    ```
-
-    Valoramos la calidad de los datos de forma gráfica, identificando la distribución de los NA en la matriz de datos.
-
-    ```{r, cache = T}
-    #install.packages("visdat")
-    library ("visdat")
-    visdat::vis_dat(penguins)
-    ```
-
-    Listado y descripción de las variables pertenecientes a la BD de PalmerPenguins
-
-    -   *species*: Especie de pingüino: Adélie (Adelia), Chinstrap (Barbijo), Gentoo (Papúa).
-
-    -   *island*: Isla donde se encontró el pingüino (Biscoe, Dream, Torgersen).
-
-    -   *bill_length_mm*: Longitud del pico en milímetros.
-
-    -   *bill_depth_mm*: Profundidad del pico en milímetros.
-
-    -   *flipper_length_mm*: Longitud de la aleta en milímetros.
-
-    -   *body_mass_g*: Masa corporal en gramos.
-
-    -   *sex*: Sexo del pingüino (macho, hembra).
-
-        Para simplificar los análisis y reducir los potenciales errores o warnings se eliminan los NA
-
-```{r, cache = T}
-library(tidyr)
-penguins1 <- penguins %>% drop_na()
-names (penguins1)
-visdat::vis_dat(penguins1)
-```
-
--   **Generamos la gráfica base**
-
-Representamos la longitud del pico frente a la anchura del pico
-
-```{r, cache = T}
-#| echo: false  #no imprime el código solo el output
-library(ggplot2)
-ggplot(data = penguins1, aes(x = bill_length_mm, y = bill_depth_mm)) + 
-      geom_point(size = 4)
-
-#generamos un objeto a partir de la gráfica generada
-p1<-ggplot(data = penguins1, aes(x = bill_length_mm, y = bill_depth_mm)) + 
-      geom_point(size = 4)
-
-```
-
-```         
--   "ggplot (data = penguins1, aes(x = bill_length_mm, y = bill_depth_mm))": Especifica el conjunto de datos y el mapeo estético.
-
--   "geom_point()": Añade puntos al gráfico.
-```
-
-ggplot2 permite guardar esta figura como un objeto en una variable. Luego puedes usar este objeto añadiéndole nuevas capas de información, por ejemplo uniendo los puntos con una línea.
-
-```{r, cache = T}
-p1 + geom_line(color = "firebrick")
-```
-
-### **Personalización del Gráfico**
-
-Se puede personalizar el gráfico añadiendo más capas y modificando la estética.
-
-1.  **Añadir Título y Etiquetas de los ejes**:
-
-    ```{r, cache = T}
-
-    ggplot(data = penguins1, 
-           aes(x = bill_length_mm, y = bill_depth_mm))+
-     geom_point() +
-     labs(title = "Relación entre la longitud y anchura del pico",
-           x = "Longitud del pico (mm)",
-           y = "Anchura del pico (mm)")
-
-    ```
-
-2.  **Cambiar Colores y Tamaños**:
-
-    Modificamos la estética, incorporando un color para cada isla, además el tamaño del punto estará condicionado por el peso del animal. También podríamos usar una forma diferente dependiendo de la especies.
-
-    ```{r, cache = T}
-
-    ggplot(data = penguins1,
-           aes(x = bill_length_mm, y = bill_depth_mm, color = island, size = body_mass_g, shape = species ))+
-      geom_point() +
-      labs(title="Relación entre la longitud y anchura del pico",
-           x = "Longitud del pico (mm)",
-           y = "Anchura del pico (mm)")
-
-    ```
-
-    -   "*color = island*": Colorea los puntos según la isla de origen.
-
-    -   "*size*" = body_mass_g: Ajusta el tamaño de los puntos según el peso de los animales.
-
-    -   "shape" = permite ajustar la forma de los puntos en base a una variable
-
-### **Facetado**
-
-El facetado permite crear múltiples gráficos basados en subgrupos de datos. Por ejemplo representando por separado la relación para cada especie.
-
-```{r, cache = T}
-
-ggplot(data = penguins1,
-       aes(x = bill_length_mm, y = bill_depth_mm))+
- geom_point() +
- geom_line(color = "blue", linewidth = 0.2)+ 
- facet_wrap(~ species) +
- labs(title="Relación entre la longitud y anchura del pico",
-       x = "Longitud del pico (mm)",
-       y = "Anchura del pico (mm)")
-
-```
-
-### **Temas**
-
-Los temas permiten personalizar la apariencia del gráfico. En esta gráfica se han incorporado diferentes aproximaciones (lm y loess) para valorar visualmente el ajuste de la asociación para cada especie.
-
-```{r, cache = T}
-ggplot(data = penguins1,
-       aes(x = bill_length_mm, y = bill_depth_mm))+
- geom_point(color = "#8B8878", size = 2) +
- theme_minimal() +
- facet_wrap(~ species) +
- geom_smooth(aes(colour = "loess"), method = "loess", se = F) +  geom_smooth(aes(colour = "lm"), method = "lm", se = FALSE) +  
- labs(title="Relación entre la longitud y anchura del pico",
-       x = "Longitud del pico (mm)",
-       y = "Anchura del pico (mm)")
-```
-
-Cambio del color de los puntos en base a una variable (los colores se generan automáticamente). Usando diferentes colores, se muestran los individuos capturados en cada isla. También se modifica el color del texto de los ejes
-
-```{r, cache = T}
-ggplot(data = penguins1,
-       aes(x= bill_length_mm, y= bill_depth_mm, color=island))+
- geom_point(size = 2) +
- theme_minimal() +
- facet_wrap(~ species) +
- geom_smooth(aes(colour = "loess"), method = "loess", se = F) +  geom_smooth(aes(colour = "lm"), method = "lm", se = FALSE) +  
- labs(title="Relación entre la longitud y anchura del pico",
-       x = "Longitud del pico (mm)",
-       y = "Anchura del pico (mm)")+
- theme(axis.text = element_text(color = "blue", size = 12),
-        axis.text.x = element_text(face = "italic"))
-
-```
-
-Se puede seleccionar manualmente los diferentes colores a utilizar para los puntos y las 2 líneas de tendencia generadas en el gráfico.
-
-```{r, cache = T}
-
-ggplot(data = penguins1,
-       aes(x= bill_length_mm, y= bill_depth_mm, color=island))+
- geom_point(size = 2) +
- scale_color_manual(values = c("darkorange", "darkorchid", "cyan4","red","black"))+
- theme_minimal() +
- facet_wrap(~ species) +
- geom_smooth(aes(colour = "loess"), method = "loess", se = F) +  geom_smooth(aes(colour = "lm"), method = "lm", se = FALSE) +  
- labs(title="Relación entre la longitud y anchura del pico",
-       x = "Longitud del pico (mm)",
-       y = "Anchura del pico (mm)")+
- theme(axis.text = element_text(color = "blue", size = 12),
-        axis.text.x = element_text(face = "italic"))
-
-```
-
-Representación de la longitud de las aletas frente al peso de los animales diferenciando las especies por color y forma. También se activa el intervalo de confianza alrededor de la línea de suavizado.
-
-```{r, cache = T}
-
-ggplot(data=penguins1,aes(x= flipper_length_mm, y= body_mass_g))+
-  geom_point(aes(color = species, 
-                 shape = species,
-                 size = 1))+
-  geom_smooth(aes(group = species,color = ""), method = "lm", se = T) +
-  scale_color_manual(values = c("orange","purple","cyan4", "black"))+
-  theme_minimal()
-```
-
-### Colores
-
-Hay diferentes opciones para poder incorporar diferentes colores en glos gráficos
-
-el uso de los colores estándares que tiene R. ([leer mas](https://elartedeldato.com/blog/7-librerias-colores-r/))
-
--   Se puede consultar el nombre y la codificación HEX de los colores en [Color-Chart](https://r-charts.com/es/colores/) eg: "#8B8878" =cornskill4
-
--   Alternativamente se pueden utilizar paletas específicas Paletas de colores
-
-    -   [Viridis](https://r-graph-gallery.com/package/viridis.html)
-
-    -   [ColorBrewer](https://r-graph-gallery.com/38-rcolorbrewers-palettes.html)
-
-    -   [Peletteer](https://r-graph-gallery.com/package/paletteer.html)
-
-Uso de una librería para ajustar una paleta de colores prefijada
-
-```{r, cache = T}
-library(RColorBrewer)
-
-ggplot(data = penguins1, aes(x = bill_length_mm, y = bill_depth_mm, color = species)) +
- geom_point(size=3) +
- scale_color_brewer(palette = "Set2") +
- theme_minimal()
-```
-
-### Explorando otras geometrías
-
-Necesitaremos crear diferentes geometrías (formas) a partir de nuestros datos (por ejemplo, diagramas de barras, histogramas, diagramas de dispersión, diagramas de caja).
-
-Esto se hace añadiendo capas "geoms" al comando inicial ggplot(). Hay muchas funciones ggplot. Cada una de estas funciones empieza por "geom\_", por lo que nos referiremos a ellas genéricamente como geom_XXXX(). Algunas de los geoms más comunes son:
-
--   **Puntos** (e.g. scatter plots) - `geom_point()`
-
--   **Gráficos de líneas** - `geom_line()` or `geom_path()`
-
--   **Líneas de tendencias** - `geom_smooth()`
-
--   **Histogramas** - `geom_histogram()`
-
--   **Gráficos de barras** - `geom_bar()` or `geom_col()`
-
--   **Gráficos de caja** - `geom_boxplot()`
-
-### Histograma
-
-Histograma representando la longitud del pico por especies, se le otorga cierta transparencia (alpha = 0.4), los colores se establecen de forma manual (scale_fill_manual)
-
-```{r, cache = T}
-ggplot(data = penguins1, mapping = aes(x=bill_length_mm))+
-  geom_histogram (aes(fill = species), alpha = 0.4, position = "identity") + 
-  scale_fill_manual(values = c("orange","orchid","cyan2"))
-
-```
-
-Variaciones del argumento position:
-
--   **"stack"**: Apila los elementos uno sobre otro. Es útil para gráficos de barras apiladas.
-
--   **"dodge"**: Coloca los elementos uno al lado del otro. Es útil para comparar diferentes grupos en gráficos de barras.
-
--   **"fill"**: Similar a stack, pero ajusta las alturas de las barras para que sumen 1. Es útil para mostrar proporciones.
-
--   **"jitter"**: Añade un pequeño desplazamiento aleatorio a los puntos para evitar la superposición. Es útil para gráficos de dispersión con muchos puntos.
-
-Histográma de densidades para las tres especies
-
-```{r, cache = T}
-ggplot(data = penguins1, mapping = aes(x = bill_length_mm)) +
- geom_density(aes(fill = species), alpha = 0.4, position = "identity") +
- scale_fill_manual(values = c("orange", "orchid", "cyan2")) +
- labs(title = "Proportional density")
-```
-
-### **Gráfico de barra**
-
-```{r, cache = T}
-
-ggplot(data = penguins1, aes(x = factor(species))) +
- geom_bar(fill = "skyblue", color = "black") +
- labs(title = "Número de pinguinos por espcie ",
-      x = "Especies de pinguinos",
-      y = "Frecuencia") +
- theme_minimal()
-
-```
-
-Contando número de individuos por especie e isla
-
-```{r, cache = T}
-ggplot(penguins1, aes(x = island, fill = species)) +
-  geom_bar(alpha = 0.8) +
-  scale_fill_manual(values = c("orange","orchid","cyan4"), 
-                    guide = "none") +
-  theme_minimal() +
-  facet_wrap(~species, ncol = 1) +
-  coord_flip()
-```
-
-Contando número de individuos por especie e isla, y diferenciando por sexo
-
-```{r, cache = T}
-
-ggplot(penguins1, aes(x = island, fill = interaction(species, sex))) +
- geom_bar(alpha = 0.8) +
- scale_fill_manual(values = c("orange", "orchid", "cyan4", "lightblue", "plum", "darkgreen"), 
-         guide = guide_legend(title = "Species and Sex")) +
- theme_minimal() +
- facet_wrap(~species, ncol = 1) +
- coord_flip ()
-
-```
-
-### Gráfico de caja
-
-```{r, cache = T}
-
-ggplot(data = penguins1, aes(x = species, y= body_mass_g)) +
- geom_boxplot(fill = "skyblue", color = "black") +
- labs(title = "Peso de los animales por espcie ",
-      x = "Especies de pinguinos",
-      y = "Peso") +
- theme_minimal()
-
-```
-
-```{r, cache = T}
-
-pb<-ggplot(data = penguins1, aes(x = species, y= body_mass_g)) +
- geom_boxplot(fill = "indianred", color = "black") +
- labs(title = "Peso de los animales por espcie ",
-      x = "Especies de pinguinos",
-      y = "Peso") +
- theme_minimal()
-
- pb+ coord_flip()
-
-```
-
-Combinando diferentes gráficos (Grafíco de Violín y distribución de los puntos)
-
-```{r, cache = T}
-pb+ coord_flip()+ 
-    geom_violin(alpha=0.5)+ 
-    geom_jitter(aes(color=species),
-              alpha=0.5, 
-              position = position_jitter(width = .2))
-```
-
-<br/>
-
-# **4. Distribuciones de probabilidad y estadística básica**
-<br/><br/>
-
-#### **Tipos de variables**
-
-1. Cuantitativas
-    * Continuas
-    * Discretas
-2. Semicuantitativas u ordinales
-3. Cualitativas o nominales
-<br/><br/>
-
-#### **Distribuciones de probabilidad: la Normal o Gaussiana**
-
-Las distribuciones de probabilidad son funciones matemáticas que definen el comportamiento de una variable. Pueden entenderse como modelos teóricos que podemos utilizar para describir las mediciones que tomamos durante nuestros experimientos. Las distribuciones se definen mediante un **nombre** y unos **parámetros**, que manejan y describen su comportamiento.
-<br/><br/>
-Una de las distribuciones de probabilidad más conocida es la distribución Normal o Gaussianas. Esta distribución describe **variables continuas** que pueden ir desde **menos infinito hasta más infinito** (rango). Tiene dos parámetros: la **media** ($\mu$) y la **varianza** ($\sigma$). Variando los valores que toman esos dos parámetros podemos obtener diferentes formas para esa distribución. 
-
-<br/>
-<p align="center">
-<img height=350 width=650 src="normal.png"> </a>
-</p>
-<font size="3">
-<br/><br/>
-
-* ¿Se te ocurre alguna variable que no pueda ser descrita por una normal?
-* ¿Conoces el nombre de alguna otra distribución de probabilidad?
-<br/><br/>
-
-Para saber si una determinada variable sigue una distribución normal podemos utilizar varios test estadísticos. Entre los más utilizados se encuentra el test de Shapiro-Wilk. Lo que hace este test es comparar nuestra variable con una distribución normal teórica, asumiendo que ambas son iguales (nuestra _hipótesis nula_ $H_0$). Si rechazamos la hipótesis nula ($p-valor < 0.05$), querrá decir que las dos distribuciones difieren, por lo que no podremos decir que nuestra variable se comporta como una distribución normal. Veamos un ejemplo:
-
-```{r, message=T, cache = T, eval = T}
-# Guardamos el archivo en un obejto que denominaremos "datos"
-datos <- read.csv("https://raw.githubusercontent.com/jabiologo/web/master/tutorials/estadisticaBasica_files/datosPracticas.csv")
-
-# Podemos utilizar la función str() para ver la estructura interna del data.frame
-str(datos)
-
-```
-
-```{r ch12, message=T, cache = T, eval = T}
-
-# Primeros elementos de la base de datos
-head(datos)
-
-# Histograma de nuestra variable dependiente (peso)
-hist(datos$peso)
-
-# Comprobamos la normalidad de nuestra variable
-shapiro.test(datos$peso)  
-
-# ¿Qué significa aquí un p-valor > 0.05?
-# ¿Cuáles son aquí nuestras hipótesis nula y alternativa?
-# Cómo trabaja la función shapiro.test()?
-help("shapiro.test")
-
-```
-
-#### **Comparación entre medias**
-
-Uno de los análisis estadísticos más comunes es la comparación de medias entre diferentes grupos: diferencias de talla entre machos y hembras, diferencias en la respuesta de un marcador molecular entre tratamiento y control, etc. Cuando sólo tenemos dos grupos podemos utilizar un T-test (o su "versión" no paramétrica U de Mann-Whitney). Veamos un ejemplo.
-
-```{r ch13, message=T, cache = T, eval = T}
-# Diferencia entre medias
-# ¿Quién pesa más, los machos o las hembras? Filtramos los datos usando tidyverse
-datosHe <- datos %>% filter(sex == "Hembra")
-datosMa <- datos %>% filter(sex == "Macho")
-
-# Recordamos: 
-# H0 (hipótesis nula): no hay diferencias significativas entre gurpos
-# H1 (hipótesis alternativa): hay diferencias significativas entre gurpos
-
-# Paramétrico: T-Student
-t.test(datosHe$peso, y = datosMa$peso) 
-
-# No paramétrico: U de Mann-Whitney
-wilcox.test(datosHe$peso, y = datosMa$peso)
-```
-<br/>
-En este caso vemos que sí que existen diferencias significativas entre el peso de los machos y de las hembras, puesto que en el T-test obtenemos un P-valor muy bajo, `6.974e-13`. Además, el estdístico `t` nos da algo de información adicional... ¿Quién pesa más, los machos o las hembras? ¿Qué le ocurre al estadístico `t` si cambiamos el orden de esta forma: `t.test(datosMa$peso, y = datosHe$peso)`?
-<br/><br/>
-
-  * ¿Cuál es mi variable dependiente o respuesta? ¿Cuál es mi variable independiente o predictor? ¿De qué tipo es cada una de nuestras variables?
-  * ¿Podrias realizar un gráfico para representar estas diferencias en el peso?  
-<br/><br/>
-
-#### **Comparación entre dos variables cuantitativas continuas**
-
-Otro de los análisis estadísticos más comunes es la comparación de dos variables cuantitativas continuas: peso y talla, cantidad de un marcador molecular con un índice de condición física, etc. Para realizar esta comparación podemos utiilizar las correlaciones. Veamos un ejemplo.
-
-```{r ch15, message=T, cache = T, eval = T}
-# ¿Cómo afecta la concentración de fungidida al peso?
-# Correlación entre dos variables continuas
-
-# Paramétrico: Correlación de Pearson
-cor.test(datos$tri, datos$peso, method = "pearson")
-
-# No paramétrico: Correlación de Spearman
-cor.test(datos$tri, datos$peso, method = "spearman")
-
-# Regresión
-regresion <- lm(peso ~ tri, data = datos)
-summary(regresion)
-
-# Gráfico de dispersión (scatter-plot)
-plot(datos$tri, datos$peso)
-```
-<br/>
-¿Qué significa que el coeficiente de correlación de Pearson sea negativo `(-0.8026473)`? ¿Qué relación existe entre este coeficiente y el `Multiple R-squared` obtenido a en la regresión? 
-<br/>
-Es importante recordar que esta regresión nos permite construir la fórmula de la recta con la cual podríamos teóricamente predecir los valores de nuestra variable respuesta en función de nuestra variale predictora. De forma general, esta fórmula se podría escribir de la siguiente manera:
-
-\begin{equation}
-\text{Variable respuesta = Intercepto + Coeficiente(Variable_predictora)}
-\end{equation}
-
-Al _coeficiente_ también lo podemos llamar _"estimador"_ y a todos los elementos de esa fórmula se suelen sustitur por diferetes caracteres, aunque suelen significar lo mismo. Aquí tienes algunos ejemplos:
-\begin{equation}
-Y = a + bX
-\end{equation}
-\begin{equation}
-Y = \alpha + \beta X
-\end{equation}
-\begin{equation}
-Y = \beta_0 + \beta_1 X
-\end{equation}
-
-Así, teniendo en cuenta los resultados de `summary(regresion)`, podríamos escribir la siguiente fórmula:
-\begin{equation}
-\text{Peso} = 526.1267 - 2.837 * (\text{concentración de triazoles})
-\end{equation}
-
-De esta forma, podríamos predecir el peso de una hipotética perdiz a partir de una concentración de triazol dada.
-<br/><br/>
-
-#### **El concepto de residuo**
-  
-  En el contexto de los modelos lineales, el concepto de residuo hace referencia a "aquella información que no somos capaces de explicar en función de nuestros predictores". Es la distancia que existe entre el valor observado y el valor predicho. Para poder utilizar los test paramétricos, estos residuos deberían seguir una distribución normal.
-  
-```{r ch155, message=T, cache = T, eval = T}
-
-summary(regresion)
-
-# Calculamos los residuos
-datos$residuos <- residuals(regresion)
-
-# Histograma de los residuos
-hist(datos$residuos)
-
-# Comprobamos la normalidad de los residuos
-shapiro.test(datos$residuos)  
-
-```
-  
-<br/>
-<p align="center">
-<img height=350 width=650 src="residuos.png"> </a>
-</p>
-<font size="3">
-<br/><br/>
-
-
-
-
-1. A continuación realizaremos una comparación entre las medias del peso de de todos los individuos entre los diferentes hábitats. ¿Hay diferencias significativas? ¿Entre qué hábitats?
-
-2. ¿Se te ocurre cómo podríamos analizar a la vez el efecto de los fungicidas, el sexo y el hábitat sobre el peso de las perdidces?
 
