--- a/tutorials/ENZOEM25.Rmd
+++ b/tutorials/ENZOEM25.Rmd
@@ -41,7 +41,7 @@ text-align: justify}
 
   1. Generalidades
   2. Principales test paramétricos y no paramétricos
-  3. El modelo lineal generalizado
+  3. El modelo lineal general (GLM)
   4. Diseños avanzados: GLS y GLMM
   
 ### [Módulo 3 - Modelos avanzados en estudios observacionales (2 y 4 de septiembre)]()
