--- a/docs/tutorials/enzoem_2.Rmd
+++ b/docs/tutorials/enzoem_2.Rmd
@@ -39,7 +39,7 @@ klippy::klippy(tooltip_message = 'Click para copiar', tooltip_success = 'Hecho!'
 En este espacio se encuentran los contenidos para el Módulo 2 - Test estadísticos en ciencias experimentales del Curso de Estadística ENZOEM, que tiene la siguiente estructura:
 
   1. Generalidades. [Materiales](https://jabiologo.github.io/web/tutorials/enzoem_2_files/enzoem2_1.zip) y [presentaciones](https://jabiologo.github.io/web/tutorials/enzoem_2_files/modulo2_1_compressed.pdf)
-  2. Principales test paramétricos y no paramétricos. [Materiales]()
+  2. Principales test paramétricos y no paramétricos. [Materiales](https://jabiologo.github.io/web/tutorials/enzoem_2_files/enzoem2_2.zip)
   3. El modelo lineal general (GLM). [Materiales]()
   4. Diseños avanzados: GLS y GLMM. [Materiales]()
 
